<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_trending"
        android:enabled="true"
        android:icon="@drawable/ic_trending"
        android:title="@string/text_trending"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_nearby"
        android:enabled="true"
        android:icon="@drawable/ic_nearby"
        android:title="@string/text_nearby"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_profile"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>