<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="pl.marchuck.parki.ui.login.LoginViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_tree" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:error="@{loginViewModel.emailError}"
            android:hint="@string/email">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:error="@{loginViewModel.passwordError}"
            android:hint="@string/password">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}" />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_margin="22dp"
            android:isVisible="@{loginViewModel.progressVisible}"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:background="@color/colorAccent"
            android:onClick="@{ ()-> loginViewModel.onLoginClick()}"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:onClick="@{ ()-> loginViewModel.onForgotPasswordClick()}"
            android:padding="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic|bold" />


    </RelativeLayout>
</layout>